[gd_scene load_steps=4 format=3 uid="uid://do6lmb7tm66fw"]

[ext_resource type="Script" path="res://multiplayer/steam/list/scenes/element.gd" id="1_loc04"]
[ext_resource type="Texture2D" uid="uid://bqnjsfbcdv5ih" path="res://multiplayer/steam/list/assets/symbol_questionmark.png" id="2_5vpcw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1j06"]
bg_color = Color(0.291651, 0.65071, 0.780984, 1)
corner_detail = 1

[node name="Control" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 65.0
script = ExtResource("1_loc04")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Avatar" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(32, 32)
texture = ExtResource("2_5vpcw")

[node name="Spacer" type="Container" parent="HBoxContainer"]
custom_minimum_size = Vector2(69.595, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="Container" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Name"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Status" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/mono_font_size = 1
theme_override_font_sizes/normal_font_size = 12
text = "Status"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Container2" type="Container" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_r1j06")
flat = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 65.325
offset_bottom = 96.325
grow_horizontal = 2

[node name="Invite" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(224, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Invite"
flat = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/Invite" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/Invite" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="CenterContainer/Invite" to="." method="_on_invite_pressed"]
